--- a/src/phonebook_assets/src/index.html
+++ b/src/phonebook_assets/src/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width" />
     <title>phonebook</title>
     <base href="/" />
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
+      rel="stylesheet"
+    />
     <link type="text/css" rel="stylesheet" href="main.css" />
+    <script src="index.js"></script>
   </head>
   <body>
-    <img src="logo.png" alt="DFINITY logo" />
     <div id="app"></div>
-    <script src="index.js"></script>
   </body>
 </html>
