--- a/src/phonebook_assets/src/index.html
+++ b/src/phonebook_assets/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>phonebook</title>
+    <title>IC Phonebook</title>
     <base href="/" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
